# MaPra_phylogenetic_embeddings

./: .gitignore  logging.config  prep_input_data.py  pyproject.toml
build_dimreduction/: train_model.py
build_dimreduction/datasets/: collate_funcs.py  sampling_dataset.py  simpledataset.py  triplet_sampling_dataset.py
build_dimreduction/models/: ff_simple.py  ff_triplets.py
build_dimreduction/utils/: ProtSeqEmbedder.py  get_raw_embeddings.py  seeding.py  triplet_mining.py
evaluation_visualization/: analysis_pipeline.py  clustering.py  compute_distmap_metrics.py  distmap_visualization.py  tree_building.py  utils.py
inference_pipeline/: embedding_distance_metrics.py  full_pipeline.py
input_data/input_case/KLK/: KLK_distances.csv  KLK_enhanced.fasta  KLK_enhanced_aligned.fas  KLK_nj_treedata_gt.nw
input_data/input_case/KLK_test/: KLK_distances.csv  KLK_enhanced.fasta
input_data/input_case/kinase/: kinase_nj_treedata_gt.nw
